welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: not found: value dance
while (dance) {
       ^BDRBuggle:43: error: not found: value dance
	else dance = false
             ^